# lab11-part2

./: .gitignore  CMakeLists.txt  main.cpp
avl/: avl.cpp  avl.h
benchmark/: benchmark.cpp  benchmark.h
data/: logs.txt  random_10.csv  random_100.csv  random_1000.csv  random_10000.csv  random_100000.csv  reversed_10.csv  reversed_100.csv  reversed_1000.csv  reversed_10000.csv  reversed_100000.csv  sorted_10.csv  sorted_100.csv  sorted_1000.csv  sorted_10000.csv  sorted_100000.csv
io/: csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h
python/: generate_dataset.py  parse_tree.py  plots.py  tree.py
results/json/: avl_example.json
results/random/: heap.csv  merge.csv  quick.csv
results/summary/: all_results.csv
results/trees/: tree.csv
sorting/: heapsort.h  mergesort.h  quicksort.h  sorts.cpp
tests/: test_runner.cpp  test_runner.h
tree23/: tree23.cpp  tree23.h
